tests/algorithms/x/Java/sorts/slowsort.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden980_slowsort776805348/001/Main.java:11: error: cannot find symbol
    static unit swap(int[] seq, int i, int j) {
           ^
  symbol:   class unit
  location: class Main
/tmp/TestJavaTranspiler_Algorithms_Golden980_slowsort776805348/001/Main.java:17: error: cannot find symbol
    static unit slowsort_recursive(int[] seq, int start, int end_index) {
           ^
  symbol:   class unit
  location: class Main
/tmp/TestJavaTranspiler_Algorithms_Golden980_slowsort776805348/001/Main.java:19: error: incompatible types: missing return value
            return;
            ^
3 errors
